--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -5,6 +5,15 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 </head>
 <body>
-    <h1>스프링 부트로 시작하는 웹 서비스</h1>
+	{{>layout/header}} <!--  현재 머스테치 파일을 기준으로 다른파일을 가져옵니다.-->
+    <h1>스프링 부트로 시작하는 웹 서비스 Ver.2</h1>
+    <div class="col-md-12">
+		<div class="row">
+			<div class="col-md-6">
+				<a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+			</div>
+		</div>
+	</div>
+    {{>layout/footer}}
 </body>
 </html>
